--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "@danocmx/backpack-tf",
-  "version": "1.1.0",
-  "description": "",
+  "name": "backpack.tf-api",
+  "version": "1.0.0",
+  "description": "Backpack.tf wrapper written in typescript.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "semantic-release": "semantic-release"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "danocmx",
+  "license": "MIT",
   "devDependencies": {
+    "@semantic-release/git": "^9.0.0",
+    "semantic-release": "^17.3.0",
     "typescript": "^4.0.2"
   },
   "dependencies": {
     "axios": "^0.21.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/danocmx/node-backpack-tf.git"
   }
 }
