--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backpack.tf-api",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "Backpack.tf wrapper written in typescript.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "@semantic-release/git": "^9.0.0",
+    "cz-conventional-changelog": "^3.3.0",
     "semantic-release": "^17.3.0",
     "typescript": "^4.0.2"
   },
@@ -22,5 +23,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/danocmx/node-backpack-tf.git"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
