fix: compile after axios upgrade

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   }
 }
